fixed nav & setup general spacing

--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,25 @@
   font-family: kanit;
 }
 
+/* Format for all pages -------------------------------------------------------------*/
+
+
 /* Nav Bar --------------------------------------------------------------------------*/
+
+.NavBar {
+  margin: 0 177px;
+  padding: 20px 50px;
+}
 
 ul {
   list-style: none;
   color: rgb(0, 0, 0);
+  display: flex;
+  flex-wrap: wrap;
 }
+
 ul li {
-  padding: 0 .5em .25em;
+  padding: 20px 30px 10px;
   cursor: pointer;
   position: relative;
   overflow: hidden;
@@ -27,12 +38,14 @@ ul li {
 }
 ul li:hover {
   color: #fff;
+  transition: .6s;
 }
 ul li:before {
   content: "";
   position: absolute;
-  inset: calc(100% - 3px) 0 0 0; /* 3px = the thickness */
+  inset: calc(100% - 3px) 0 0 0;
   background: #949978; /* the color */
+  bottom: 0;
   scale: 0 1;
   transition: .3s, translate 0s .3s;
 }
